Oculto filtros de orden

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="loading fadeIn">
             <p>Loading...</p>
           </div>
-          <ul class="list view-type">
+          <!--<ul class="list view-type">
             <li class="list__item view-type__gallery">
               <a href="#" class="list__link view-type__link">
                 <span></span>
@@ -103,7 +103,7 @@
                 <span></span>
               </a>
             </li>
-          </ul>
+          </ul>-->
           <nav class="main-menu main-menu--filters" aria-label="Main">
             <ul class="list main-menu__list">
               <li class="list__item main-menu__item is-active">
